k8s/frigate/app/exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate-exporter
  namespace: frigate
  annotations:
    glance/hide: "true"
  labels:
    app: frigate-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate-exporter
  template:
    metadata:
      labels:
        app: frigate-exporter
    spec:
      containers:
        - name: frigate-exporter
          image: rhysbailey/prometheus-frigate-exporter:0.1.1
          ports:
            - containerPort: 9100
              name: frigate-metrics
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9100
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9100
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: frigate-exporter
  namespace: frigate
  labels:
    app: frigate-exporter
spec:
  ports:
    - port: 9100
      targetPort: 9100
      name: frigate-metrics
  selector:
    app: frigate-exporter
