k8s/frigate/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-ingressroute
  namespace: frigate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`frigate.home.coredev.uk`) && (PathPrefix(`/api`) || PathPrefix(`/vod`) || PathPrefix(`/clips`) || PathPrefix(`/recordings`))
      kind: Rule
      middlewares:
        - name: frigate-headers
      services:
        - name: frigate
          port: 8971
          scheme: https
          serversTransport: frigate-transport
    - match: Host(`frigate.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: frigate-headers
        - name: authelia-forwardauth
          namespace: authelia
      services:
        - name: frigate
          port: 8971
          scheme: https
          serversTransport: frigate-transport
  tls:
    secretName: frigate-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frigate-headers
  namespace: frigate
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    customResponseHeaders:
      Strict-Transport-Security: "max-age=63072000"
